*
* 0.1.20
*

- Added Oracle support (via ODBC driver)
- Added server installation program (Windows only)
- Added server configuration wizard (Windows only)
- SNMP agent connectivity check improved
- Added special handling for CheckPoint SNMP agent
- Windows CE Console improved:
	- Added "Last DCI Values" view
	- Added graph view
	- Added collected DCI data view
	- Added full screen mode support
	- Implemented sorting in alarm browser
	- Implemented alarm browser autoupdate
	- Implemented object managed/unmanaged state switching
	- Implementen node wakeup
- Network discovery polling mechanism redesigned
- Fixed bug in "show pollers" console command handler
- Fixed occasional appearance of invalid objects at the root of object tree


*
* 0.1.19
*

- Data collection templates fully functional
- Added possibility to use server name instead of IP address in
  agent configuration
- Added diff() method for DCI thresholds
- Added possibility to set server config file via environment variable
  NETXMSD_CONFIG on UNIX or registry key HKLM\Software\NetXMS\Server\ConfigFile
  on Windows
- Fixed deadlock in status poller
- Fixed incorrect socket handling in AgentConnection class
- Fixed sorting bug in Windows console alarm browser
- Fixed GUI unresponsiveness when acknowledging large number of alarms


*
* 0.1.18
*

- Added support for object database caching on client side
- Polling performance increased
- Fix: SYS_SERVICE_DOWN event was generated in place of SYS_SERVICE_UNKNOWN
- nxadm completely rewritten, and now allows to execute any command
  available on server console in standalone mode
- Windows console: 
	- Implemented desktop configuration save and restore
	- Added possibility to change graph's time frame
	- Added support for multiple DCIs on one graph
	- Added graph presets
	- Many small UI improvements


*
* 0.1.17
*

- Templates can be manually applied
- Fixed issue #0000021 (agent crash on multiprocessor Solaris systems)